third_party/move/move-compiler/tests/move_check/inlining/break_continue_in_lambda.exp
error[E04014]: invalid loop control
   ┌─ tests/move_check/inlining/break_continue_in_lambda.move:14:9
   │
14 │         break;
   │         ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

error[E04014]: invalid loop control
   ┌─ tests/move_check/inlining/break_continue_in_lambda.move:60:2
   │
60 │     break;
   │     ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

error[E04014]: invalid loop control
   ┌─ tests/move_check/inlining/break_continue_in_lambda.move:64:2
   │
64 │     continue;
   │     ^^^^^^^^ Invalid usage of 'continue'. 'continue' can only be used inside a loop body

